# TDT4305

project_1/Tasks/: Task1.ipynb  Task4.ipynb
project_2/: Makefile  MinHash.ipynb  README.md  lsh.py  pyproject.toml
project_3/: Makefile  Project 3 - Mining Data Streams, Adwords and RecSys.ipynb  README.md  pyproject.toml
